# idea_share

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  load_test.rs  t.md
.trae/specs/comprehensive-improvements/: checklist.md  spec.md  tasks.md
.trae/specs/project-co-creation-platform/: checklist.md  spec.md  tasks.md
benches/: benchmark.rs
migrations/: 20260404121553_init.sql  20260404121554_votes.sql  20260404121555_collaboration_requests.sql  20260404121556_progress_tasks_needs.sql  20260406050000_project_categories.sql  20260406060000_comment_replies.sql  20260406060001_comment_table_fix.sql  20260406060002_missing_tables.sql  20260406070000_project_archive.sql  20260406120000_add_user_indexes.sql  20260406130000_project_templates.sql  20260406140000_user_activity_logs.sql
src/: main.rs
src/auth/: hash.rs  middleware.rs  mod.rs  models.rs  session.rs
src/cache/: example.rs  filesystem.rs  manager.rs  mod.rs
src/db/: connection.rs  init.rs  mod.rs  seed.rs
src/handlers/: app_state.rs  auth.rs  mod.rs  pages.rs  progress_task_need.rs
src/models/: mod.rs  progress_task_need.rs  project_template.rs
src/routes/: mod.rs
templates/: base.html  edit_profile.html  idea_form.html  index.html  login.html  need_detail.html  need_form.html  progress_form.html  project_detail.html  project_form.html  project_template_form_template.html  projects.html  register.html  tag_detail.html  tags.html  task_form.html  template_form.html  templates.html  user_management.html  user_profile.html
(+6 files in other folders)
