[package]
name = "idea_share"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "load_test"
path = "load_test.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde", "std"] }
rand = "0.8"
axum-macros = "0.4"
hyper = "1.9"
uuid = { version = "1.4", features = ["v4"] }
serde_json = "1.0"
futures = "0.3"
tower-layer = "0.3"
tower-service = "0.3"
reqwest = { version = "0.11", features = ["json", "tokio-rustls"] }
comrak = "0.18"
urlencoding = "2.1"
bytes = "1.6"

[dev-dependencies]
criterion = "0.5"
bcrypt = "0.15"

[[bench]]
name = "benchmark"
harness = false

